syntax = "proto3";

package Protocol;

import "Enum.proto";

option csharp_namespace = "Google.Protobuf.Common";

message PositionInfo{
    CreatureState state = 1;
    MoveDir move_dir = 2; 
    int32 pos_x = 3;
    int32 pos_y = 4;
}

message PlayerInfo{
    int64 playerId = 1;
    string name = 2;
    PositionInfo pos_info = 3;
}

message SkillInfo{
    int32 skill_id = 1;
}